@@ -319,6 +319,37 @@ argument_list|)
 expr_stmt|;
 block|}
 specifier|public
+name|void
+name|setUrl
+parameter_list|(
+name|URL
+name|url
+parameter_list|)
+block|{
+if|if
+condition|(
+name|url
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|(
+literal|"Cannot set a null URL"
+argument_list|)
+throw|;
+block|}
+name|settings
+operator|.
+name|setUrl
+argument_list|(
+name|url
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
 name|String
 name|getRealm
 parameter_list|()
