@@ -269,6 +269,172 @@ return|;
 block|}
 specifier|public
 name|void
+name|testDefaultCacheDir
+parameter_list|()
+block|{
+comment|// test with an URL
+name|configure
+operator|.
+name|setUrl
+argument_list|(
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"ivysettings-defaultCacheDir.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|setSettingsId
+argument_list|(
+literal|"test"
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"mycache"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+name|project
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.cache.dir.test"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// test with a File
+name|project
+operator|=
+operator|new
+name|Project
+argument_list|()
+expr_stmt|;
+name|configure
+operator|=
+operator|new
+name|IvyConfigure
+argument_list|()
+expr_stmt|;
+name|configure
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivysettings-defaultCacheDir.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|setSettingsId
+argument_list|(
+literal|"test2"
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"mycache"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+name|project
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.cache.dir.test2"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// test if no defaultCacheDir is specified
+name|project
+operator|=
+operator|new
+name|Project
+argument_list|()
+expr_stmt|;
+name|configure
+operator|=
+operator|new
+name|IvyConfigure
+argument_list|()
+expr_stmt|;
+name|configure
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivysettings-noDefaultCacheDir.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|setSettingsId
+argument_list|(
+literal|"test3"
+argument_list|)
+expr_stmt|;
+name|configure
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|project
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.cache.dir.test3"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testDefault
 parameter_list|()
 throws|throws
